@@ -23,6 +23,8 @@
 	<label index="download.normal">You only selected one file -> normal file download</label>
 	<label index="download.compressed">The selected files have been packed into an archive for download</label>
 	<label index="error.minimumFile">Please select at least one file</label>
+	<label index="error.download">Download of asset is not possible</label>
+	<label index="error.access">No access to this asset</label>
 	<label index="maxFileSizeExceeded">The file '#{filename}' has exceeded the maximum allowed filesize (#{maxFileSize}) to upload</label>
 	<label index="maxLengthFileNameExceeded">The file '#{filename}' has exceeded the maximum allowed length (#{maxLengthFileName}) of its name to upload</label>
 	<label index="locked">This task is locked. You can't add files</label>
