@@ -3,6 +3,7 @@ todoyu assets extension changelog
 assets 1.2.0 - not released yet
 	* Feature: Add assets also during task edit
 	* Feature: No upload form required anymore. Dialog is opened directly on button click
+	* Feature: Check first if download of asset is possible. Show error message if a problem occurs
 	* Changed: Optimized styling to save space
 
 assets 1.1.0 - 2011-06-17
